--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.3", features = ["fs", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
+hyper = "0.14"
+pin-project-lite = "0.2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
