--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,17 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hyper = "0.14"
 pin-project-lite = "0.2"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+log = "0.4"
+log4rs = "1.1"
+log4rs-macros = "1.1"
+once_cell = "1.13"
+eyre = "0.6"
+color-eyre = "0.5"
+uuid = {version = "1.0.0", features = ["serde", "v4"]}
+chrono = {version = "0.4.21", features = ["serde"]}
+validator = { version = "0.14", features = ["derive"] }
+futures = { version = "0.3", features = ["compat"] }
+deadpool-postgres = "0.10"
+tokio-pg-mapper = "0.2"
+tokio-pg-mapper-derive = "0.2"
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
