--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "delete": "^1.1.0",
     "gulp": "^4.0.2",
+    "gulp-copy": "^4.0.1",
     "gulp-gzip": "^1.4.2",
     "gulp-tar": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
