--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.0.18",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "copy-webpack-plugin": "^11.0.0",
     "delete": "^1.1.0",
@@ -24,12 +26,16 @@
     "toml": "^3.0.0",
     "ts-loader": "^9.3.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
