--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ractiviti-core = { path = "../ractiviti-core"}
 axum = "0.5"
 tokio = { version = "1.0", features = ["full"] }
 tower = { version = "0.4", features = ["full"] }
