--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum = "0.5"
 tokio = { version = "1.0", features = ["full"] }
 tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.3", features = ["fs", "trace"] }
+ramhorns = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hyper = "0.14"
