--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "es5",
         "module": "es6",
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "lib": [
             "es6",
             "dom"
