--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "axios-inherit": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
