--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum-extra = "0.3.7"
 async-trait = "0.1"
 rust-crypto = "0.2"
 rand = "0.8"
