--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@types/redux-logger": "^3.0.9",
     "copy-webpack-plugin": "^11.0.0",
     "delete": "^1.1.0",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-gzip": "^1.4.2",
-    "gulp-tar": "^3.1.0",
+    "gulp-tar": "^2.1.0",
     "html-webpack-plugin": "^5.5.0",
     "toml": "^3.0.0",
     "ts-loader": "^9.3.1",
@@ -34,18 +34,22 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.6",
+    "@mui/material": "^5.10.11",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "axios-inherit": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.0",
     "react-redux": "^8.0.4",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "zod": "^3.19.1"
   }
 }
