--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,5 @@ deadpool-postgres = "0.10"
 tokio-pg-mapper = "0.2"
 tokio-pg-mapper-derive = "0.2"
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
-dysql = { version="0.7" }
-dysql-macro = { version="0.7", features = ["tokio-postgres"] }
+dysql = { path = "../dysql-project/dysql" }
+dysql-macro = { path = "../dysql-project/dysql-macro", features = ["tokio-postgres"] }
