--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.11",
     "@mui/x-data-grid": "^5.17.11",
+    "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "axios-inherit": "^1.0.1",
+    "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.0",
