--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # axum-macros = "0.2"
 axum-extra = "0.3"
 async-trait = "0.1"
+int-enum = "0.4"
 rust-crypto = "0.2"
 rand = "0.8"
 ractiviti-core = { path = "../ractiviti-core"}
