--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.27.2",
     "axios-inherit": "^1.0.1",
     "dayjs": "^1.11.6",
+    "randomized-string": "^1.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.0",
